[gd_scene load_steps=7 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Legs.gd" type="Script" id=2]
[ext_resource path="res://assets/legs.png" type="Texture" id=3]

[sub_resource type="PhysicsMaterial" id=3]
rough = true

[sub_resource type="CapsuleShape2D" id=7]
radius = 24.0

[sub_resource type="CircleShape2D" id=8]
radius = 46.0

[node name="Legs" type="RigidBody2D"]
position = Vector2( 217, 418 )
mass = 8.0
physics_material_override = SubResource( 3 )
contacts_reported = 3
contact_monitor = true
linear_damp = 0.5
script = ExtResource( 2 )
speed = 40.0

[node name="Icon" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[node name="Counter Weight" type="RigidBody2D" parent="."]
position = Vector2( 0, 195 )
collision_layer = 0
mass = 10.0
linear_damp = 0.8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Counter Weight"]
shape = SubResource( 8 )

[node name="PinJoint2D2" type="PinJoint2D" parent="."]
position = Vector2( 0, 195 )
node_a = NodePath("..")
node_b = NodePath("../Counter Weight")

[node name="polygons" type="Node2D" parent="."]
position = Vector2( -3, -31 )
scale = Vector2( 0.0741067, 0.0741067 )

[node name="pelvis" type="Polygon2D" parent="polygons"]
position = Vector2( -1412.33, -806.499 )
offset = Vector2( 447, -56 )
texture = ExtResource( 3 )
skeleton = NodePath("../../Skeleton2D")
polygon = PoolVector2Array( 1039.79, 1159.62, 1057.09, 1148.08, 1130.17, 1148.08, 1155.17, 1148.08, 1235.94, 1069.23, 1226.33, 998.077, 1149.4, 1023.08, 1137.86, 1001.92, 1166.71, 982.692, 1170.56, 901.923, 1197.48, 880.769, 1199.4, 798.077, 878.248, 775, 868.633, 888.462, 912.864, 921.154, 922.479, 955.769, 924.402, 992.308, 1003.25, 1107.69 )
uv = PoolVector2Array( 1045.56, 1169.23, 1057.09, 1148.08, 1130.17, 1148.08, 1155.17, 1148.08, 1235.94, 1069.23, 1226.33, 998.077, 1149.4, 1023.08, 1137.86, 1001.92, 1166.71, 982.692, 1170.56, 901.923, 1197.48, 880.769, 1199.4, 798.077, 878.248, 775, 868.633, 888.462, 912.864, 921.154, 922.479, 955.769, 924.402, 992.308, 1003.25, 1107.69 )
bones = [ "hip", PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 0.5, 0.5, 0, 0, 0, 0, 0, 0, 0.5, 1, 1 ), "hip/chest", PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0, 0 ), "hip/leg_left", PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ), "hip/leg_left/calf_left", PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ), "hip/leg_left/calf_left/lower_left", PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ), "hip/leg_right", PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ), "hip/leg_right/calf_right", PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ), "hip/leg_right/calf_right/Bone2D", PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ) ]

[node name="left_leg" type="Polygon2D" parent="polygons"]
position = Vector2( -965.326, -1069.5 )
texture = ExtResource( 3 )
skeleton = NodePath("../../Skeleton2D")
polygon = PoolVector2Array( 1030.98, 1932.43, 1068.82, 1902.7, 1033.68, 1848.65, 879.63, 1837.84, 855.306, 1729.73, 847.197, 1672.97, 890.441, 1659.46, 909.359, 1629.73, 879.63, 1589.19, 941.792, 1540.54, 966.116, 1491.89, 949.9, 1451.35, 1052.6, 1386.49, 1071.52, 1335.14, 1071.52, 1283.78, 1112.06, 1240.54, 1014.77, 1200, 920.17, 1167.57, 809.359, 1210.81, 771.522, 1281.08, 814.765, 1356.76, 809.359, 1394.59, 766.116, 1418.92, 763.414, 1491.89, 774.224, 1521.62, 695.846, 1545.95, 655.306, 1616.22, 644.495, 1686.49, 671.522, 1762.16, 728.278, 1856.76, 755.306, 1902.7, 825.576, 1929.73 )
uv = PoolVector2Array( 1030.98, 1932.43, 1068.82, 1902.7, 1033.68, 1848.65, 879.63, 1837.84, 849.9, 1694.59, 847.197, 1672.97, 890.441, 1659.46, 909.359, 1629.73, 879.63, 1589.19, 941.792, 1540.54, 966.116, 1491.89, 949.9, 1451.35, 1052.6, 1386.49, 1071.52, 1335.14, 1071.52, 1283.78, 1112.06, 1240.54, 1014.77, 1200, 920.17, 1167.57, 809.359, 1210.81, 771.522, 1281.08, 814.765, 1356.76, 809.359, 1394.59, 766.116, 1418.92, 763.414, 1491.89, 774.224, 1521.62, 695.846, 1545.95, 655.306, 1616.22, 644.495, 1686.49, 671.522, 1762.16, 728.278, 1856.76, 755.306, 1902.7, 825.576, 1929.73 )
bones = [ "hip", PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0.5, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ), "hip/chest", PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ), "hip/leg_left", PoolRealArray( 0, 0, 0, 0, 0, 0.5, 0.5, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0.5, 0, 0, 0, 0, 0 ), "hip/leg_left/calf_left", PoolRealArray( 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0.5 ), "hip/leg_left/calf_left/lower_left", PoolRealArray( 1, 1, 1, 0.5, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0.5 ), "hip/leg_right", PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ), "hip/leg_right/calf_right", PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ), "hip/leg_right/calf_right/Bone2D", PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ) ]

[node name="right_leg" type="Polygon2D" parent="polygons"]
position = Vector2( -965.326, -1069.5 )
texture = ExtResource( 3 )
skeleton = NodePath("../../Skeleton2D")
polygon = PoolVector2Array( 1198.55, 1918.92, 1425.58, 1913.51, 1447.2, 1875.68, 1401.25, 1835.14, 1285.04, 1824.32, 1249.9, 1829.73, 1198.55, 1662.16, 1233.68, 1651.35, 1241.79, 1616.22, 1212.06, 1591.89, 1260.71, 1556.76, 1276.93, 1518.92, 1266.12, 1445.95, 1374.22, 1378.38, 1385.04, 1318.92, 1355.31, 1254.05, 1252.6, 1210.81, 1147.2, 1232.43, 1109.36, 1270.27, 1117.47, 1343.24, 1136.39, 1391.89, 1114.77, 1427.03, 1079.63, 1456.76, 1082.33, 1505.41, 1098.55, 1527.03, 1066.12, 1545.95, 1020.17, 1594.59, 1012.06, 1672.97, 1033.68, 1751.35, 1071.52, 1797.3, 1103.95, 1851.35, 1125.58, 1894.59 )
uv = PoolVector2Array( 1198.55, 1918.92, 1425.58, 1913.51, 1447.2, 1875.68, 1401.25, 1835.14, 1285.04, 1824.32, 1249.9, 1829.73, 1198.55, 1662.16, 1233.68, 1651.35, 1241.79, 1616.22, 1212.06, 1591.89, 1260.71, 1556.76, 1276.93, 1518.92, 1266.12, 1445.95, 1374.22, 1378.38, 1385.04, 1318.92, 1355.31, 1254.05, 1252.6, 1210.81, 1147.2, 1232.43, 1109.36, 1270.27, 1117.47, 1343.24, 1136.39, 1391.89, 1114.77, 1427.03, 1079.63, 1456.76, 1082.33, 1505.41, 1098.55, 1527.03, 1066.12, 1545.95, 1020.17, 1594.59, 1012.06, 1672.97, 1033.68, 1751.35, 1071.52, 1797.3, 1103.95, 1851.35, 1125.58, 1894.59 )
bones = [ "hip", PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ), "hip/chest", PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ), "hip/leg_left", PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ), "hip/leg_left/calf_left", PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ), "hip/leg_left/calf_left/lower_left", PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ), "hip/leg_right", PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0.5, 0.5, 0.5, 0.5, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0 ), "hip/leg_right/calf_right", PoolRealArray( 0.5, 0, 0, 0, 0.5, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1 ), "hip/leg_right/calf_right/lower_right", PoolRealArray( 1, 1, 1, 1, 1, 0.5, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0.5 ) ]

[node name="Skeleton2D" type="Skeleton2D" parent="."]

[node name="hip" type="Bone2D" parent="Skeleton2D"]
position = Vector2( 4, -16 )
rotation = -1.58111
scale = Vector2( 0.333571, -247.434 )
rest = Transform2D( -0.00344139, -0.333553, -247.421, 2.55274, 4, -16 )

[node name="chest" type="Bone2D" parent="Skeleton2D/hip"]
position = Vector2( 21.0148, 0.00374937 )
scale = Vector2( 2.31403, 1 )
rest = Transform2D( 2.31403, 0, 0, 1, 21.0148, 0.00374937 )

[node name="leg_left" type="Bone2D" parent="Skeleton2D/hip"]
position = Vector2( -9.11023, 0.0381961 )
scale = Vector2( 6.48801, 8.32367 )
rest = Transform2D( 6.48801, 0, 0, 8.32367, -9.11023, 0.0381961 )

[node name="calf_left" type="Bone2D" parent="Skeleton2D/hip/leg_left"]
position = Vector2( -10.9612, 0.00671323 )
rest = Transform2D( 1, 0, 0, 1, -10.9612, 0.00671323 )

[node name="lower_left" type="Bone2D" parent="Skeleton2D/hip/leg_left/calf_left"]
position = Vector2( -8.81686, -0.00378894 )
rotation = -0.0459464
scale = Vector2( 0.00982124, 2.43384 )
rest = Transform2D( 0.00981088, -0.000451092, 0.111787, 2.43127, -8.81686, -0.00378894 )

[node name="leg_right" type="Bone2D" parent="Skeleton2D/hip"]
position = Vector2( -12.3929, -0.0523697 )
rest = Transform2D( 1, 0, 0, 1, -12.3929, -0.0523697 )

[node name="calf_right" type="Bone2D" parent="Skeleton2D/hip/leg_right"]
position = Vector2( -65.671, 0.0372887 )
rest = Transform2D( 1, 0, 0, 1, -65.671, 0.0372887 )

[node name="lower_right" type="Bone2D" parent="Skeleton2D/hip/leg_right/calf_right"]
position = Vector2( -57.1731, -0.0274967 )
rotation = -0.261799
scale = Vector2( 0.0154398, 1.26108 )
rest = Transform2D( 0.0149137, -0.00399611, 0.32639, 1.21811, -57.1731, -0.0274967 )
